--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0 165px 0 165px;
+    /* padding: 0 165px 0 165px; */
     box-sizing: border-box;
     font-family: 'Livvic', sans-serif;
 }
