--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0 165px 0 165px;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Livvic', sans-serif;
 }
@@ -91,3 +91,75 @@ buttons
     background-color: var(--rapture-blue);
     color: var(--dark-green);
 }
+
+/* ---------------------
+Home Main 1
+---------------------- */
+
+.home_main-1 {
+    padding: 140px 165px 140px 165px;
+    background-color: var(--sacramento-state-green);
+}
+
+.section_divider {
+    width: 50px;
+    height: 4px;
+    background-color: var(--light-coral);
+    border: none;
+    margin-bottom: 54px;
+}
+
+.home_main-1 > div{
+    display: flex;
+    flex-direction: row;
+}
+
+.home_main-1_title_container {
+    color: var(--white);
+    width: 50%;
+    margin-right: 70px;
+}
+
+.home_main-1_title_container .h2 {
+    width: 420px;
+}
+
+.home_main-1_description_container {
+    width: 50%;
+}
+
+.home_main-1_description_box {
+    display: flex;
+    flex-direction: row;
+}
+
+.home_main-1_description_box > div {
+    margin: 0 0 32px 23px;
+}
+
+.home_main-1_description_icon {
+    width: 72px;
+    height: 72px;
+}
+
+.home_main-1_description_box .h3{
+    color: var(--light-coral);
+    margin-bottom: 16px;
+}
+
+.home_main-1_description_box .body_2 {
+    color: var(--white);
+    opacity: 0.8;
+}
+/* ----------------- */
+
+/* -----------------
+Desktop media query to 768px
+------------------- */
+@media (max-width:1440px) and (min-width:768px) {
+    .container_sides_padding {
+        padding-right: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
+        padding-left: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
+    };
+}; 
+/* ------------------- */
