--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,11 @@
 * {
     margin: 0;
-    padding: 0 165px 0 165px;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Livvic', sans-serif;
 }
+
+
 /* ------------------
 colors
 -------------------- */
@@ -90,4 +92,48 @@ buttons
 .secondary_btn-light:hover {
     background-color: var(--rapture-blue);
     color: var(--dark-green);
+}
+
+
+/* Header nav */
+
+
+.header_nav{
+    padding: 73px 165px 13px 165px;
+    background-color:var(--midnight-green);
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+
+.nav_h2 {
+    margin-right: 42px;
+}
+
+.nav_word{
+    word-spacing: 40px;
+    margin-left: 40px;
+}
+a:link{
+    text-decoration: none;
+}
+a.nav:visited{
+    color: var(--white);
+}
+a.nav:hover{
+    color: var(--light-coral);
+}
+
+.header-right{
+    margin-left: 680px;
+}
+.header_nav_links{
+    /* box-sizing: content-box;
+    width: 200px;
+    height: 35px;
+    margin-top: 30px;
+    padding-top: 30px; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
