--- a/CSS/mainstyle2.css
+++ b/CSS/mainstyle2.css
@@ -40,7 +40,7 @@ color: var(--white);
 }
 
 .description-kady {
-    padding-left: 165px;
+    margin-left: 165px;
     padding-right: 30px;
     padding-bottom: 151px;
 }
@@ -51,7 +51,7 @@ color: var(--white);
 
 .description-arthur{
     padding-left: 30px;
-    padding-right: 165px;
+    margin-right: 165px;
 }
 
 .Main_description_2 h5{
@@ -69,7 +69,7 @@ color: var(--white);
 
 .photo img{
     margin-top: 32px;
-    margin-bottom: 140px;
+    /* margin-bottom: 140px; */
     width: 62px;
     height: 62px;
     border-radius: 50%;
