--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,6 +106,7 @@ buttons
 }
 .nav_h2 {
     margin-right: 42px;
+    display: inline-block;
 }
 
 .nav_word{
@@ -122,15 +123,21 @@ a.nav:visited{
 a.nav:hover{
     color: var(--light-coral);
 }
-
-.header-right{
-    margin-left: 680px;
-}
 .header_nav_links{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
+.left_header{
+    display: flex;
+    align-items: center;
+}
+.right_header{
+    float: right;
+    display: flex;
+    align-items: center;
+  }
 
 /*----------------------- 
 Header baner
