--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,16 +140,25 @@ Header baner
     color: var(--white);
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 .h2_title{
     width: 800px;
     margin-left: 165px; 
     margin-top: 120px;
-    margin-bottom: 170px; 
+    margin-bottom: 250px; 
+}
+.home_banner_section_divider {
+    width: 50px;
+    height: 4px;
+    background-color: var(--rapture-blue);
+    border: none;
+    margin-top: 130px;
+    margin-bottom: 79px;
+    margin-left: 40px;
 }
 .p_header{
     width: 500px;
-    margin-top: 220px;
     margin-right: 100px;
     margin-left: 40px;
 }
@@ -166,9 +175,11 @@ Home Main 1
 .home_main-1 {
     padding: 140px 165px 140px 165px;
     background-color: var(--sacramento-state-green);
+    position: relative;
+    overflow: hidden;
 }
 
-.section_divider {
+.home_main-1_section_divider {
     width: 50px;
     height: 4px;
     background-color: var(--light-coral);
@@ -219,6 +230,39 @@ Home Main 1
 }
 /* ----------------- */
 
+/* -------------------
+Background patterns
+--------------------- */
+.bg-pattern-home-1 {
+    position: absolute;
+    top: 120px;
+    left: -100px;
+}
+
+.bg-pattern-home-2 {
+    position: absolute;
+    right: 165px;
+    bottom: 0;
+}
+
+.bg-pattern-home-3 {
+    position: absolute;
+    right: -100px;
+    bottom: 0;
+}
+
+.bg-pattern-home-4 {
+    position: absolute;
+    left: 0;
+    top: 0; 
+}
+
+.bg-pattern-home-5 {
+    position: absolute;
+    right: 0;
+    bottom: 0; 
+}
+
 /* -----------------
 Desktop media query to 768px
 ------------------- */
@@ -229,3 +273,4 @@ Desktop media query to 768px
     };
 }; 
 /* ------------------- */
+
