--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -16,6 +16,10 @@
     margin-top: 20px;
   }
 
+  a:hover{
+    color: lightcoral;
+  }
+
   h2{
     font-size: 60px;
     font-family: 'Livvic Bold' 48px, 48px;
@@ -29,18 +33,19 @@
   
   
   .col-2{
-    margin-top: -200px;
+    margin-top: -140px;
     margin-left: 400px;
     color:  gray;
-    font-size: 130%;
+    font-size: 100%;
   }
   
   
    .col-3{
     float:right;
-    margin-top: -50px;
+    margin-top: 30px;
     margin-right: 70px;
     color: gray;
+    position: relative;
   } 
   
   .col-4-icons{
@@ -52,8 +57,11 @@
     position: relative;
     font-size: 30px;
     justify-content:space-evenly;
-    margin-bottom: 100px;
-    margin-top: -170px;
+    margin-top: -100px;
     margin-left: -50px;
     align-items:start;
+    
+  }
+  .fa-facebook:hover{
+    color: #1877f2; color:red;
   }
