--- a/CSS/style.css
+++ b/CSS/style.css
@@ -227,9 +227,9 @@ Home Main 1
     height: 72px;
 }
 
-/* .home_main-1_description_icon-1 {
+.home_main-1_description_icon-1 {
     margin-left: 4px;
-} */
+}
 
 .home_main-1_description_box .h3{
     color: var(--light-coral);
