--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,66 +1,61 @@
-.footer{
-    /* max-width: 1440px; */
-    width:100%;
-    height: 196px;
-    left: 0px;
-    padding: 50px 5%;
+.footer-section-2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: space-between;
+    padding: 55px 165px 55px 165px;
     background: #002529;
     color: white;
-    overflow-x: hidden
+    overflow-x: hidden;
   }
   
+  .links a {
+    margin-right: 40px;
+  }
+
   a{
     color: white;
     text-decoration: none;
-    margin-right: 50px;
-    margin-top: 20px;
   }
 
   a:hover{
     color: lightcoral;
   }
 
-  h2{
-    font-size: 60px;
-    font-family: 'Livvic Bold' 48px, 48px;
+  .col1_col2 {
+    display: flex;
+    flex-direction: row;
   }
-  
-  
-  
+
   .col-1{
-    margin-bottom: -100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 125px;
   }
-  
   
   .col-2{
-    margin-top: -140px;
-    margin-left: 400px;
     color:  gray;
-    font-size: 100%;
   }
-  
-  
-   .col-3{
-    float:right;
-    margin-top: 30px;
-    margin-right: 70px;
+
+  .copyright{
+    margin-top: 40px;
     color: gray;
-    position: relative;
   } 
   
-  .col-4-icons{
+  .icons{
     display:flex;
-    flex-wrap:wrap;
     flex-direction:row;
-    justify-content: center;
-    float: right;
-    position: relative;
+    justify-content: end;
     font-size: 30px;
-    justify-content:space-evenly;
-    margin-top: -100px;
-    margin-left: -50px;
-    align-items:start;
-    
+  }
+
+  .icons a {
+    margin-left: 16px;
+  }
+
+  .icons.a:hover{
+    color: lightcoral;
   }
   .fa-facebook:hover{
     color: #1877f2; color:red;
