--- a/CSS/style.css
+++ b/CSS/style.css
@@ -363,26 +363,28 @@ Contact us main
     margin-right: 80px;
 }
 .column2{
-    margin-top: -60px;
+    margin-top: -35px;
     margin-right: -150px;
     /* margin-left: 100px; */
 
 }
     .form_inputs{
+    padding-left: 15px;
     display: flex;
     flex-direction: column;
     border: 1px solid var(--white);
     color: var(--white);
+    padding-top: 24px;
+    padding-bottom: 23px;
     border-top: none;
     border-left: none;
     border-right: none;
     background-color: transparent;
-    padding: 26px 0 40px 15px;
+    
     width: 540px;
-    /* margin-top: -40px; */
 }
 .Message{
-    padding: 25px 0 50px 15px;
+    padding: 25px 0 100px 15px;
 }
 .submit{
     margin-top: 20px;
@@ -393,6 +395,10 @@ Contact us main
 }
 .knopka{
     margin-top: 10px;
+    border: none;
+}
+::placeholder {
+    color: var(--rapture-blue);
 }
 /* -----------------
 Desktop media query to 768px
