--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,7 +206,8 @@ Home Main 1
 }
 
 .home_main-1_title_container .h2 {
-    width: 420px;
+    min-width: 420px;
+    max-width: 420px;
 }
 
 .home_main-1_description_container {
@@ -278,7 +279,7 @@ Background patterns
 .bg-pattern-home-6-about-5 {
     position: absolute;
     left: 0;
-    bottom: 0; 
+    bottom: 0px; 
 }
 
 .bg-pattern-about-1-mobile-nav-1 {
@@ -398,11 +399,134 @@ Contact us main
 Desktop media query to 768px
 ------------------- */
 /* @media (max-width:1440px) and (min-width:768px) {
-@media (max-width:1440px) and (min-width:768px) {
-    .container_sides_padding {
+    .container_sides_padding_desktop {
         padding-right: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
         padding-left: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
-    };
-};  */
+    }
+} */
+
 /* ------------------- */
+
+/* -------------------
+Tablet media query from 768px to 375px 
+----------------------*/
+@media (max-width:1440px) and (min-width:768px) {
+    /*nav */
+    .header_nav{
+        padding: 64px 40px 13px 40px;
+        background-color:var(--midnight-green);
+        color: white;
+    }
+    .nav_h2 {
+        margin-right: 42px;
+        display: inline-block;
+    }
+    
+    .nav_word{
+        word-spacing: 40px;
+        margin-left: 40px;
+    }
+    a:link {
+        text-decoration: none;
+    }
+    .nav_word:link{
+        color: var(--white);
+    }
+    .nav_word.nav:visited{
+        color: var(--white);
+    }
+    .nav_word.nav:hover{
+        color: var(--light-coral);
+    }
+    .header_nav_links{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .left_header{
+        display: flex;
+        align-items: center;
+    }
+    .right_header{
+        float: right;
+        display: flex;
+        align-items: center;
+    }
+    /* Home page Header banner */
+    .Header_banner{
+        padding: 100px 40px 100px 40px;
+        flex-direction:column;
+        text-align: center;
+    }
+    .h2_title{
+        max-width: 600px;
+        margin: 0 0 24px 0;
+        align-self: center;
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 56px;
+    }
+    .home_banner_section_divider {
+        display: none;
+    }
+    .p_header{
+        max-width: 460px;
+        margin: 0 auto;
+        padding-bottom: 156px;
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 28px;
+    }
+    .bg-pattern-home-1 {
+        display: none;
+    }
+    .bg-pattern-home-2 {
+        right: 250px;
+    }
+    /* Home page Main 1 */
+    .home_main-1 {
+        padding: 100px 98px 100px 98px;
+    }
+    .home_main-1_section_divider {
+        margin-bottom: 32px;
+    }  
+    .home_main-1 > div{
+        display: flex;
+        flex-direction: column;
+    }
+    .home_main-1_title_container {
+        width: 100%;
+        margin-right: 0px;
+    }  
+    .home_main-1_title_container .h2 {
+        max-width: 445px;
+        min-width: 300px;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 32px;
+        margin-bottom: 64px;
+    } 
+    .home_main-1_description_container {
+        width: 100%;
+    }
+    .bg-pattern-home-3 {
+        position: absolute;
+        right: -100px;
+        top: 0;
+    }
+    /*  footer 1 */
+    .footer_1{
+        padding: 84px 98px 84px 98px; 
+    }
+    .footer_h2 {
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 32px;
+    }
+    .bg-pattern-home-6-about-5 {
+        bottom: -22px; 
+        z-index: 5;
+    }
+}
 
