--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,8 +166,8 @@ Header baner
     margin-left: 40px;
 }
 .p_header{
-    max-width: 445px;
-    margin-right: 100px;
+    width: 370px;
+    margin-right: 165px;
     margin-left: 40px;
 }
 .red{
