--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,7 +166,7 @@ Header baner
     margin-left: 40px;
 }
 .p_header{
-    max-width: 445px;
+    width: 370px;
     margin-right: 100px;
     margin-left: 40px;
 }
