--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,8 +206,7 @@ Home Main 1
 }
 
 .home_main-1_title_container .h2 {
-    min-width: 420px;
-    max-width: 420px;
+    width: 420px;
 }
 
 .home_main-1_description_container {
@@ -433,54 +432,16 @@ Desktop media query to 768px
 /* ------------------- */
 
 /* -------------------
-Tablet media query from 768px to 375px 
+Tablet media query from 1440px to 768px 
 ----------------------*/
-@media (max-width:1440px) and (min-width:768px) {
+@media (max-width:1440px) {
     /*nav */
     .header_nav{
         padding: 64px 40px 13px 40px;
-        background-color:var(--midnight-green);
-        color: white;
-    }
-    .nav_h2 {
-        margin-right: 42px;
-        display: inline-block;
-    }
-    
-    .nav_word{
-        word-spacing: 40px;
-        margin-left: 40px;
-    }
-    a:link {
-        text-decoration: none;
-    }
-    .nav_word:link{
-        color: var(--white);
-    }
-    .nav_word.nav:visited{
-        color: var(--white);
-    }
-    .nav_word.nav:hover{
-        color: var(--light-coral);
-    }
-    .header_nav_links{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .left_header{
-        display: flex;
-        align-items: center;
-    }
-    .right_header{
-        float: right;
-        display: flex;
-        align-items: center;
-    }
+    } 
     /* Home page Header banner */
     .Header_banner{
-        padding: 100px 40px 100px 40px;
+        padding: 100px 40px 256px 40px;
         flex-direction:column;
         text-align: center;
     }
@@ -498,7 +459,6 @@ Tablet media query from 768px to 375px
     .p_header{
         max-width: 460px;
         margin: 0 auto;
-        padding-bottom: 156px;
         font-weight: 600;
         font-size: 15px;
         line-height: 28px;
@@ -525,8 +485,7 @@ Tablet media query from 768px to 375px
         margin-right: 0px;
     }  
     .home_main-1_title_container .h2 {
-        max-width: 445px;
-        min-width: 300px;
+        width: 445px;
         font-weight: 700;
         font-size: 32px;
         line-height: 32px;
@@ -555,3 +514,46 @@ Tablet media query from 768px to 375px
     }
 }
 
+/* -------------------
+Mobile media query from 768px
+----------------------*/
+@media (max-width:768px) {
+    /* Home page Header banner */
+    .Header_banner{
+        padding: 77px 24px 197px 24px;
+    }
+    .h2_title {
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 40px;
+    }
+    .bg-pattern-home-2 {
+        left: 0;  
+    }
+    .p_header{
+        max-width: 327px;
+    }
+    /* Home page Main 1 */
+    .home_main-1 {
+        padding: 64px 24px 64px 24px;
+    }
+    .home_main-1_title_container .h2 {
+        width:240px;
+    } 
+    .home_main-1_description_box {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    /*  footer 1 */
+    .footer_1{
+        padding: 83px 24px 83px 24px; 
+        flex-direction: column;
+
+    }
+    .footer_h2 {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 24px;
+    }
+}
