--- a/CSS/style.css
+++ b/CSS/style.css
@@ -408,6 +408,7 @@ Contact us main
 .Main_name{
     color: var(--white);
     display: flex;
+    padding-bottom: 40px;
     flex-direction: none;
 }
 .Main_description{
@@ -415,7 +416,7 @@ Contact us main
     font-weight: 300;
     font-size: 35px;
     line-height: 30px;
-    padding: 15px 0 13px 0;
+    padding: 20px 0 25px 0;
 }
 .Main_description_p{
     color: var(--white);
