--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -12,7 +12,7 @@
     width: 100%;
   }
   
-  .links a {
+  .link_home {
     margin-right: 2.5em;
   }
 
@@ -64,7 +64,7 @@
     color: #1877f2; color:red;
   }
 
-  @media (max-width:1440px) and (min-width:768px) {
+  @media (max-width:1440px) {
     .footer-section-2{
         padding: 56px 40px 56px 40px;
         display: flex;
@@ -75,6 +75,9 @@
       .col1_col2 {
         justify-content: space-between;
       }
+      .col-2{
+        text-align: end;
+      }
       .col-3 {
         display: flex;
         justify-content: space-between;
@@ -84,5 +87,34 @@
       .icons{
         margin-left: -15px;
       }
+}
 
+
+@media (max-width:768px) {
+  .footer-section-2{
+    padding: 66px 24px 64px 24px;
+  }
+  .col1_col2 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .col-1{
+    margin-right: 0px;
+  }
+  .col-1 .links {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+  .col-2{
+    text-align: center;
+  }
+  .col-3 {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+
+  }
+  .copyright{
+    margin-top: 16px;
+  } 
 }
