--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,6 +140,60 @@ a:link {
     align-items: center;
 }
 
+/* Mobile menu */
+
+.mobile_overlay_container{
+    display: none;
+   position: fixed;
+   top: 0;
+   right: 0;
+   width: 100vw;
+   height: 100vh;
+   background: rgba(0, 0, 0, 0.5);
+   z-index: 20;
+}
+.mobile_nav_inner{
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 255px;
+    height: 100%;
+    background: var(--police-blue);
+    padding: 56px 25px 0px 48px;
+}
+.mobile_nav_inner:after{
+    position: absolute;
+    content: '';
+    right: -100px;
+    bottom: 0;
+    width: 200px;
+    height: 200px;
+    background-image: url(../IMG/bg-pattern-about-1-mobile-nav-1.svg);
+    background-repeat: no-repeat;
+}
+p.mobile_nav_close{
+    text-align: right;
+}
+.mobile_nav_close{
+    cursor: pointer;
+}
+.mobile_nav_open{
+    display: none;
+    cursor: pointer;
+    padding: 0;
+}
+.mobile_overlay_container ul{
+    margin-top: 40px;
+    list-style: none;
+}
+.mobile_overlay_container ul li{
+    margin-top: 24px;
+    margin-bottom: 30px;
+}.mobile_overlay_container ul li a{
+    transition: 0.3s;
+    color: var(--white);
+}
+
 /*----------------------- 
 Header baner
 ----------------------- */
@@ -206,8 +260,7 @@ Home Main 1
 }
 
 .home_main-1_title_container .h2 {
-    min-width: 420px;
-    max-width: 420px;
+    width: 420px;
 }
 
 .home_main-1_description_container {
@@ -320,10 +373,14 @@ Background patterns
 .about-img_container{
     display: flex;
     align-items: center;
+    text-align: center;
     padding: 0px 165px 151px 165px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .about-img_about{
     width: 70%;
+    padding-bottom: 56px;
 }
 
 /* ----------------------
@@ -420,9 +477,44 @@ Contact us main
 .name{
     padding-top:0;
 }
+.error-field{
+    border-bottom: 1px solid var(--light-coral);
+     
+    /* box-shadow: 3px 3px 20px rgb(219, 76, 63); ;  */
+ }
+ .error-field::placeholder{
+    color: var(--light-coral);
+ }
+ .error-label{
+     color: var(--light-coral) !important;
+     padding-left: 15px;
+ }
+ .text_eror{
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12,55px;
+    font-style: italic;
+    padding-top: 5px;
+ }
 /* -----------------
 Desktop media query to 768px
 ------------------- */
+@media (max-width:768px) and (min-width:375px) {
+    .header_nav{
+        padding: 56px 24px 13px 24px;
+    }
+    .header_nav_links div a{
+        display: none;
+    }
+    .open_btn svg{
+        display: block ;
+    }
+    /* .container_sides_padding {
+        padding-right: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
+        padding-left: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
+    }; */
+}
+/* -------------------
 /* @media (max-width:1440px) and (min-width:768px) {
     .container_sides_padding_desktop {
         padding-right: calc(15px + (100vw - 768px) * (15 - 60) / (768 -  1000));
@@ -433,54 +525,16 @@ Desktop media query to 768px
 /* ------------------- */
 
 /* -------------------
-Tablet media query from 768px to 375px 
+Tablet media query from 1440px to 768px 
 ----------------------*/
-@media (max-width:1440px) and (min-width:768px) {
+@media (max-width:1440px) {
     /*nav */
     .header_nav{
         padding: 64px 40px 13px 40px;
-        background-color:var(--midnight-green);
-        color: white;
-    }
-    .nav_h2 {
-        margin-right: 42px;
-        display: inline-block;
-    }
-    
-    .nav_word{
-        word-spacing: 40px;
-        margin-left: 40px;
-    }
-    a:link {
-        text-decoration: none;
-    }
-    .nav_word:link{
-        color: var(--white);
-    }
-    .nav_word.nav:visited{
-        color: var(--white);
-    }
-    .nav_word.nav:hover{
-        color: var(--light-coral);
-    }
-    .header_nav_links{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .left_header{
-        display: flex;
-        align-items: center;
-    }
-    .right_header{
-        float: right;
-        display: flex;
-        align-items: center;
-    }
+    } 
     /* Home page Header banner */
     .Header_banner{
-        padding: 100px 40px 100px 40px;
+        padding: 100px 40px 256px 40px;
         flex-direction:column;
         text-align: center;
     }
@@ -498,7 +552,6 @@ Tablet media query from 768px to 375px
     .p_header{
         max-width: 460px;
         margin: 0 auto;
-        padding-bottom: 156px;
         font-weight: 600;
         font-size: 15px;
         line-height: 28px;
@@ -525,8 +578,7 @@ Tablet media query from 768px to 375px
         margin-right: 0px;
     }  
     .home_main-1_title_container .h2 {
-        max-width: 445px;
-        min-width: 300px;
+        width: 445px;
         font-weight: 700;
         font-size: 32px;
         line-height: 32px;
@@ -555,3 +607,46 @@ Tablet media query from 768px to 375px
     }
 }
 
+/* -------------------
+Mobile media query from 768px
+----------------------*/
+@media (max-width:768px) {
+    /* Home page Header banner */
+    .Header_banner{
+        padding: 77px 24px 197px 24px;
+    }
+    .h2_title {
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 40px;
+    }
+    .bg-pattern-home-2 {
+        left: 0;  
+    }
+    .p_header{
+        max-width: 327px;
+    }
+    /* Home page Main 1 */
+    .home_main-1 {
+        padding: 64px 24px 64px 24px;
+    }
+    .home_main-1_title_container .h2 {
+        width:240px;
+    } 
+    .home_main-1_description_box {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    /*  footer 1 */
+    .footer_1{
+        padding: 83px 24px 83px 24px; 
+        flex-direction: column;
+
+    }
+    .footer_h2 {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 24px;
+    }
+}
