--- a/CSS/aboutHeader.css
+++ b/CSS/aboutHeader.css
@@ -20,7 +20,7 @@
     font-weight: 700;
     font-size: 64px;
     line-height: 100px;
-    height: 100px;
+  
     width: 350px;
     margin-left: 165px;
     padding-right: 30px;
@@ -39,8 +39,40 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 28px;
-    height: 112px;
+  
     width: 730px;
     margin-right: 165px;
     margin-bottom: 120px;
+}
+
+/* -------------------
+Tablet media query from 1440px to 768px 
+----------------------*/
+@media (max-width:1440px) {
+    .Header_main{
+        padding: 90px 40px 102px 40px;
+        flex-direction:column;
+        align-items: center;
+        text-align: center;
+    }
+    .Header_main h1{
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 100px;
+        height: 100px;
+        width: 350px;
+        margin-left: 0px;
+        padding-right: 0px;
+        margin-bottom: 34px;
+        margin-top: 0px;
+    }
+    .about_banner_section_divider {
+        display: none;
+    }
+    .Header_main p{
+        font-size: 15px;
+        width: 457px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+    }
 }
