--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -86,6 +86,7 @@
       }
       .icons{
         margin-left: -15px;
+        text-align: center;
       }
 }
 
@@ -97,13 +98,20 @@
   .col1_col2 {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   .col-1{
     margin-right: 0px;
   }
+  .col-1 h2 {
+    font-size: 40px;
+  }
   .col-1 .links {
     margin-top: 24px;
     margin-bottom: 24px;
+  }
+  .link_home {
+    margin-right: 24px;
   }
   .col-2{
     text-align: center;
